@@ -1,6 +1,10 @@
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 eclipse.project.name = appName + '-core'
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
   api "com.badlogicgames.ashley:ashley:$ashleyVersion"
   api "com.badlogicgames.box2dlights:box2dlights:$box2dlightsVersion"
@@ -10,7 +14,79 @@ dependencies {
   api "com.badlogicgames.gdx:gdx:$gdxVersion"
   api "space.earlygrey:shapedrawer:$shapeDrawerVersion"
   implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.13.0'// Just to add arrays together
+  // implementation libs.guava
   implementation "com.github.tommyettinger:textratypist:0.10.0" // TextraTypist!
   implementation 'org.jetbrains:annotations:20.1.0'
   implementation 'org.jetbrains:annotations:20.1.0'
+  testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.1")
+  testImplementation("org.junit.jupiter:junit-jupiter-engine:5.8.1")
+  implementation("org.junit.jupiter:junit-jupiter-api:5.8.1")
+  implementation("org.junit.jupiter:junit-jupiter-engine:5.8.1")
 }
+
+testing {
+    suites {
+        test {
+                useJUnit('4.13.2')
+        }
+    }
+}
+
+test
+  {
+
+    // discover and execute JUnit4-based tests
+    useJUnit()
+
+    // discover and execute TestNG-based tests
+    useTestNG()
+
+    // discover and execute JUnit Platform-based tests
+    useJUnitPlatform()
+
+    // This is the line that is causing an inheritance error.
+    // sourceSets.main.java.srcDirs = ['src']
+
+    testClassesDirs = project.files { "./build" }
+    sourceSets.main.resources.srcDirs = ['resources']
+    sourceSets.test.java.srcDirs = ['test']
+
+    // set a system property for the test JVM(s)
+    systemProperty 'some.prop', 'value'
+
+    // explicitly include or exclude tests
+    include 'core/src/test/java/**'
+    exclude ''
+
+    // show standard out and standard error of the test JVM(s) on the console
+    testLogging.showStandardStreams = true
+
+    // set heap size for the test JVM(s)
+    minHeapSize = "128m"
+    maxHeapSize = "512m"
+
+    // set JVM arguments for the test JVM(s)
+    jvmArgs '-XX:MaxPermSize=256m'
+
+    // listen to events in the test execution lifecycle
+    beforeTest { descriptor ->
+      logger.lifecycle("Running test: " + descriptor)
+    }
+
+    // fail the 'test' task on the first test failure
+    failFast = true
+
+    // skip an actual test execution
+    dryRun = true
+
+    // listen to standard out and standard error of the test JVM(s)
+    onOutput { descriptor, event ->
+      logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message)
+
+    }
+
+  }
+
+// application {
+//   mainClass = 'org.bitbucket.noahcrosby.shipGame.TileShipGame'
+// }
